--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
+    <link href="..\node_modules\hover.css\css\hover-min.css" rel="stylesheet" />
     <title>React App</title>
   </head>
   <body>
